add mathjax support

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -74,3 +74,7 @@
 
 <!-- Extended head section-->
 {{ partial "extended_head.html" . }}
+
+<!-- MathJax support-->
+{{ if .Params.mathjax }}{{ partial "mathjax_support.html" . }}{{ end }}
+
